Next STep is to Clean all UP, Got Maps better

--- a/app/src/main/res/layout/popup_length_entry_inches.xml
+++ b/app/src/main/res/layout/popup_length_entry_inches.xml
@@ -94,7 +94,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/very_lite_grey"
-                android:hint="@string/inches"
+                android:hint="0-99"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
@@ -120,7 +120,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/very_lite_grey"
-                android:hint="@string/_0_7_8ths"
+                android:hint="0-7"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
