--- a/app/src/main/res/layout/popup_weight_entry_kgs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_kgs.xml
@@ -20,7 +20,7 @@
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title_weight_kgs"
+            android:text="Fun Day Catch Kgs"
             android:textSize="25sp"
             android:layout_gravity="center"
             android:gravity="center"
